--- a/SuperheroAPI/appsettings.json
+++ b/SuperheroAPI/appsettings.json
@@ -1,6 +1,6 @@
 {
   "ConnectionStrings": {
-    "DefaultConnection" : "server=localhost\\sqlexpress;database=superherodb;trusted_connection=true"
+    "DefaultConnection": "Server=(localdb)\\Local;Database=superherodb;Trusted_Connection=True;"
   },
   "Logging": {
     "LogLevel": {
